# stocks-trading-agent

./: .envrc.example  .gitignore  README.md  WINDOWS_SETUP.md  nse_portfolio.json  pyproject.toml  requirements-scanner.txt  requirements.txt  run_backtest.py  run_scanner.py  run_tradingview_bot.py  start_bot.bat  start_bot.command  watchlist.txt  watchlist_in.txt
.github/workflows/: paper-trader.yml
chrome_extension/: background.js  content.js  manifest.json
docs/: system-design.html
notebooks/: 0_api_endpoints_test_data.ipynb  1_tools_and_sample_agents.ipynb  2_testing_py_code.ipynb  3_workshop_demo.ipynb
stocks_agent/: __init__.py  conversation_agent.py  free_agent.py  simple_agent.py  structured_agent.py  tools.py
stocks_agent/technicals/: __init__.py  backtest.py  data.py  divergence.py  engine.py  indicators.py  options_signals.py  patterns.py  quant.py  scoring.py  structure.py  volume_profile.py  zones.py
tradingview_bot/: __init__.py  alpaca.py  browser.py  journal.py  scanner.py  server.py  sidebar.js  virtual_broker.py  watchlists.py
